src/tests/snapshots/hooklistener__tests__help__help_cases_replay.snap
---
source: src/tests/help.rs
expression: "render_help_snapshot(&[\"cases\", \"replay\"])"
---
Queue one saved case for delivery by the service or an active CLI listener

Usage: hooklistener cases replay [OPTIONS] <CASE_ID>

Arguments:
  <CASE_ID>  Saved case ID

Options:
      --target <TARGET>        Target: a service-side URL, a saved target ID, or cli for an active
                               listen session
      --method <METHOD>        Override the HTTP method for this delivery only [possible values:
                               GET, POST, PUT, PATCH, DELETE, HEAD, OPTIONS]
      --headers <JSON>         JSON object of request header overrides for this delivery only
      --body <BODY>            Request body override for this delivery only
      --idempotency-key <KEY>  Delivery key; reuse with identical inputs to recover a lost receipt
                               [default: new UUID]
      --dry-run                Server preview of scope and target policy; queues no delivery
  -o, --org <ORG_ID>           Organization ID (overrides the configured default)
  -h, --help                   Print help

Global options:
      --json               Output supported command responses or event streams as JSON
      --color <COLOR>      Styling policy for human output [default: auto] [possible values: auto,
                           always, never]
      --yes                Confirm destructive commands without an interactive prompt
      --log-level <LEVEL>  Log level [default: info] [possible values: trace, debug, info, warn,
                           error]
      --log-dir <DIR>      Directory for log files
      --log-stdout         Also write logs to stdout
