src/tests/snapshots/hooklistener__tests__help__help_cases_runs_wait.snap
---
source: src/tests/help.rs
expression: "render_help_snapshot(&[\"cases\", \"runs\", \"wait\"])"
---
Wait for an existing run; never queues another delivery

Usage: hooklistener cases runs wait [OPTIONS] <RUN_ID>

Arguments:
  <RUN_ID>  Case run ID

Options:
      --timeout <DURATION>   Maximum wait, such as 60, 2m, or 1h (up to 1h) [default: 30s]
      --interval <DURATION>  Read-only polling interval, such as 500ms or 2s (100ms to 30s)
                             [default: 250ms]
  -o, --org <ORG_ID>         Organization ID (overrides the configured default)
  -h, --help                 Print help

Global options:
      --json               Output supported command responses or event streams as JSON
      --color <COLOR>      Styling policy for human output [default: auto] [possible values: auto,
                           always, never]
      --yes                Confirm destructive commands without an interactive prompt
      --log-level <LEVEL>  Log level [default: info] [possible values: trace, debug, info, warn,
                           error]
      --log-dir <DIR>      Directory for log files
      --log-stdout         Also write logs to stdout
