src/tests/snapshots/hooklistener__tests__help__help_endpoint.snap
---
source: src/tests/help.rs
expression: "render_help_snapshot(&[\"endpoint\"])"
---
Manage debug endpoints and their captured requests

Usage: hooklistener endpoint [OPTIONS] <COMMAND>

Commands:
  create           Create a debug endpoint
  list             List debug endpoints for an organization
  show             Show a single debug endpoint by ID
  delete           Delete a debug endpoint by ID
  list-requests    List captured requests for an endpoint [aliases: requests]
  show-request     Show a captured request [aliases: request]
  delete-request   Delete a captured request
  forward-request  Replay a captured request to a target URL
  list-forwards    List forwards of a captured request [aliases: forwards]
  show-forward     Show a forward by ID [aliases: forward]
  help             Print this message or the help of the given subcommand(s)

Options:
  -h, --help  Print help

Global options:
      --json               Output supported command responses or event streams as JSON
      --color <COLOR>      Styling policy for human output [default: auto] [possible values: auto,
                           always, never]
      --yes                Confirm destructive commands without an interactive prompt
      --log-level <LEVEL>  Log level [default: info] [possible values: trace, debug, info, warn,
                           error]
      --log-dir <DIR>      Directory for log files
      --log-stdout         Also write logs to stdout
